tests/baselines/reference/asyncModule_es5.errors.txt
asyncModule_es5.ts(1,1): error TS1042: 'async' modifier cannot be used here.
asyncModule_es5.ts(1,14): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== asyncModule_es5.ts (2 errors) ====
    async module M {
    ~~~~~
!!! error TS1042: 'async' modifier cannot be used here.
                 ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    }